  . Fixed bug #52738 (Can't use new properties in class extended from 
    DateInterval). (Stas)
  . Fixed bug #52290 (setDate, setISODate, setTime works wrong when DateTime
    created from timestamp). (Stas)
  . Fixed bug #52063 (DateTime constructor's second argument doesn't have a 
    null default value). (Gustavo, Stas)

- Filter extension:
  . Fixed bug #53150 (FILTER_FLAG_NO_RES_RANGE is missing some IP ranges).
    (Ilia)
  . Fixed bug #52209 (INPUT_ENV returns NULL for set variables (CLI)). (Ilia)
  . Fixed bug #47435 (FILTER_FLAG_NO_RES_RANGE don't work with ipv6).
    (Ilia, valli at icsurselva dot ch)

- Gettext
  . Fixed bug #53837 (_() crashes on Windows when no LANG or LANGUAGE 
    environment variable are set). (Pierre)

- IMAP extension:
  . Implemented FR #53812 (get MIME headers of the part of the email). (Stas)
  . Fixed bug #53377 (imap_mime_header_decode() doesn't ignore \t during long
    MIME header unfolding). (Adam)
    
- Intl extension:
  . Fixed bug #53612 (Segmentation fault when using cloned several intl
    objects). (Gustavo)
  . Fixed bug #53512 (NumberFormatter::setSymbol crash on bogus $attr values).
    (Felipe)
  . Implemented clone functionality for number, date & message formatters. 
    (Stas).

- MySQL Improved extension:
  . Added 'db' and 'catalog' keys to the field fetching functions (FR #39847). 
    (Kalle)
  . Fixed buggy counting of affected rows when using the text protocol. The
    collected statistics were wrong when multi_query was used with mysqlnd
    (Andrey)
  . Fixed bug #53795 (Connect Error from MySqli (mysqlnd) when using SSL). 
    (Kalle)
  . Fixed bug #53503 (mysqli::query returns false after successful LOAD DATA 
    query). (Kalle, Andrey)
  . Fixed bug #53425 (mysqli_real_connect() ignores client flags when built to 
    call libmysql). (Kalle, tre-php-net at crushedhat dot com)

- OpenSSL extension:
  . Fixed stream_socket_enable_crypto() not honoring the socket timeout in